Working next js test page with widgets

--- a/examples/nextjs/env.example
+++ b/examples/nextjs/env.example
@@ -1,4 +1,4 @@
 # Ordify Configuration
 NEXT_PUBLIC_ORDIFY_AGENT_ID=your-agent-id
 NEXT_PUBLIC_ORDIFY_API_KEY=your-api-key
-NEXT_PUBLIC_ORDIFY_API_BASE_URL=https://api.ordify.ai
+NEXT_PUBLIC_ORDIFY_API_BASE_URL=https://r.ordify.ai
