--- a/package.json
+++ b/package.json
@@ -60,8 +60,7 @@
   },
   "dependencies": {
     "lucide-react": "^0.544.0",
-    "react-markdown": "^10.1.0",
-    "remark-gfm": "^4.0.1",
+    "markdown-to-jsx": "^7.7.13",
     "styled-components": "^6.1.19",
     "use-stick-to-bottom": "^1.1.1"
   },
