--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ordify-chat-widget",
-  "version": "1.0.2",
+  "version": "1.0.5",
   "description": "A professional React chat widget for integrating Ordify AI agents into applications with minimal setup.",
   "main": "dist/index.cjs.js",
   "module": "dist/index.esm.js",
@@ -61,6 +61,7 @@
   "dependencies": {
     "lucide-react": "^0.544.0",
     "markdown-to-jsx": "^7.7.13",
+    "ordify-chat-widget": "^1.0.5",
     "styled-components": "^6.1.19",
     "use-stick-to-bottom": "^1.1.1"
   },
