--- a/vue2/package.json
+++ b/vue2/package.json
@@ -23,6 +23,7 @@
     "build": "tsc && vite build",
     "preview": "vite preview",
     "test": "vitest",
+    "test:ui": "vite --port 3002",
     "lint": "eslint src --ext ts,js,vue --report-unused-disable-directives --max-warnings 0",
     "type-check": "tsc --noEmit",
     "prepublishOnly": "npm run build"
@@ -60,16 +61,18 @@
   "dependencies": {
     "lucide-vue": "^0.517.0",
     "markdown-to-jsx": "^7.7.13",
-    "vue-styled-components": "^1.0.0",
-    "use-stick-to-bottom": "^1.1.1"
+    "use-stick-to-bottom": "^1.1.1",
+    "vue-styled-components": "^1.0.0"
   },
   "devDependencies": {
     "@types/node": "^20.0.0",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
     "@vitejs/plugin-vue2": "^2.3.1",
+    "@vue/test-utils": "^1.3.6",
     "eslint": "^8.55.0",
     "eslint-plugin-vue": "^9.0.0",
+    "jsdom": "^27.0.0",
     "typescript": "^5.2.2",
     "vite": "^5.0.8",
     "vite-plugin-dts": "^3.6.4",
