--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "use-stick-to-bottom": "^1.1.1"
   },
   "devDependencies": {
+    "@types/node": "^20.0.0",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
