--- a/package.json
+++ b/package.json
@@ -49,6 +49,10 @@
   },
   "license": "MIT",
   "type": "module",
+  "engines": {
+    "node": ">=18.0.0",
+    "npm": ">=9.0.0"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/ordify-ai/chat-widget.git"
