--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -10,7 +10,7 @@ jobs:
   publish-npm:
     runs-on: ubuntu-latest
     permissions:
-      contents: read
+      contents: write
       packages: write
       
     steps:
@@ -29,20 +29,37 @@ jobs:
     - name: Build package
       run: npm run build
         
-    - name: Check if version exists on NPM
-      id: check-npm
+    - name: Configure Git
+      run: |
+        git config --local user.email "action@github.com"
+        git config --local user.name "GitHub Action"
+        
+    - name: Auto-bump version if needed
+      id: version-bump
       run: |
         CURRENT_VERSION=$(node -p "require('./package.json').version")
+        echo "Current version: $CURRENT_VERSION"
+        
+        # Check if version exists, if yes, bump patch version
         if npm view ordify-chat-widget@$CURRENT_VERSION version >/dev/null 2>&1; then
-          echo "exists=true" >> $GITHUB_OUTPUT
-          echo "Version $CURRENT_VERSION already exists on NPM"
+          echo "Version $CURRENT_VERSION already exists on NPM, bumping patch version..."
+          npm version patch --no-git-tag-version
+          NEW_VERSION=$(node -p "require('./package.json').version")
+          echo "Bumped to version: $NEW_VERSION"
+          echo "version=$NEW_VERSION" >> $GITHUB_OUTPUT
+          echo "bumped=true" >> $GITHUB_OUTPUT
+          
+          # Commit version bump
+          git add package.json
+          git commit -m "chore: auto-bump version to $NEW_VERSION [skip ci]" || exit 0
+          git push || echo "Push failed, continuing..."
         else
-          echo "exists=false" >> $GITHUB_OUTPUT
-          echo "Version $CURRENT_VERSION is new on NPM"
+          echo "Version $CURRENT_VERSION is new on NPM, using it"
+          echo "version=$CURRENT_VERSION" >> $GITHUB_OUTPUT
+          echo "bumped=false" >> $GITHUB_OUTPUT
         fi
         
     - name: Publish to NPM
-      if: steps.check-npm.outputs.exists == 'false'
       run: |
         # Temporarily change package name for NPM
         npm pkg set name="ordify-chat-widget"
@@ -61,6 +78,8 @@ jobs:
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
+      with:
+        fetch-depth: 0
       
     - name: Setup Node.js
       uses: actions/setup-node@v4
@@ -75,24 +94,18 @@ jobs:
     - name: Build package
       run: npm run build
         
-    - name: Check if version exists on GitHub Packages
-      id: check-github
-      run: |
-        CURRENT_VERSION=$(node -p "require('./package.json').version")
-        if npm view @ordify-ai/chat-widget@$CURRENT_VERSION version >/dev/null 2>&1; then
-          echo "exists=true" >> $GITHUB_OUTPUT
-          echo "Version $CURRENT_VERSION already exists on GitHub Packages"
-        else
-          echo "exists=false" >> $GITHUB_OUTPUT
-          echo "Version $CURRENT_VERSION is new on GitHub Packages"
-        fi
-        
     - name: Mirror to GitHub Packages
-      if: steps.check-github.outputs.exists == 'false'
       run: |
-        # Only mirror if version doesn't already exist
+        # Use the version that was published to NPM (may have been auto-bumped)
         CURRENT_VERSION=$(node -p "require('./package.json').version")
         echo "Mirroring version $CURRENT_VERSION to GitHub Packages"
-        npm publish
+        
+        # Check if version already exists, skip if it does
+        if npm view @ordify-ai/chat-widget@$CURRENT_VERSION version >/dev/null 2>&1; then
+          echo "Version $CURRENT_VERSION already exists on GitHub Packages, skipping..."
+        else
+          echo "Publishing version $CURRENT_VERSION to GitHub Packages"
+          npm publish
+        fi
       env:
         NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
