Fix test workflow to correctly detect publish failures

--- a/.github/workflows/test-publish.yml
+++ b/.github/workflows/test-publish.yml
@@ -113,18 +113,36 @@ jobs:
         echo ""
         echo "=== Publish Attempt Result ==="
         if [ $PUBLISH_EXIT_CODE -eq 0 ]; then
-          echo "✅ Publish succeeded! (unexpected on dev branch)"
+          echo "✅ Publish succeeded!"
         else
-          echo "❌ Publish failed (expected - this shows us the real error)"
+          echo "❌ Publish failed with exit code: $PUBLISH_EXIT_CODE"
           echo ""
           echo "=== Error Details ==="
-          cat publish-attempt.log | grep -A 10 "npm error" || cat publish-attempt.log
+          cat publish-attempt.log | grep -A 10 "npm error" || cat publish-attempt.log | tail -20
           echo ""
-          echo "=== Common Issues ==="
-          echo "If you see 404 'not in this registry':"
-          echo "  1. Check Trusted Publisher on npm matches exactly:"
-          echo "     - Repository: Ordify-Ai/chat-widget"
-          echo "     - Workflow file: publish.yml (not test-publish.yml)"
-          echo "  2. The repository URL in package.json must match what's in Trusted Publisher"
-          echo "  3. Make sure you're publishing from the 'main' branch (Trusted Publishing requirement)"
+          echo "=== Root Cause Analysis ==="
+          if grep -q "404 Not Found" publish-attempt.log; then
+            echo "❌ 404 Error detected - This is a Trusted Publishing verification failure"
+            echo ""
+            echo "Most likely causes:"
+            echo "  1. ⚠️  BRANCH MISMATCH: Trusted Publishing only works from the branch"
+            echo "     specified in npm settings. You're on: ${{ github.ref_name }}"
+            echo "     Trusted Publisher is likely configured for 'main' branch only."
+            echo ""
+            echo "  2. Workflow file name mismatch:"
+            echo "     - Current workflow: ${{ github.workflow }}"
+            echo "     - Trusted Publisher expects: publish.yml"
+            echo "     - Make sure Trusted Publisher is configured for 'publish.yml'"
+            echo ""
+            echo "  3. Repository mismatch:"
+            echo "     - Current repo: ${{ github.repository }}"
+            echo "     - Make sure Trusted Publisher shows: Ordify-Ai/chat-widget"
+            echo ""
+            echo "=== Solution ==="
+            echo "Trusted Publishing typically only works from the 'main' branch."
+            echo "To test properly, you need to:"
+            echo "  1. Merge your changes to main"
+            echo "  2. The publish workflow will run automatically on main"
+            echo "  3. Or configure Trusted Publisher to allow 'dev' branch (not recommended)"
+          fi
         fi
