--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
   ],
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "tsc && vite build && npm run build:standalone",
+    "build:standalone": "vite build --config vite.standalone.config.ts",
     "preview": "vite preview",
     "test": "vitest",
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
@@ -58,6 +59,8 @@
     "url": "https://github.com/ordify-ai/chat-widget/issues"
   },
   "homepage": "https://github.com/ordify-ai/chat-widget#readme",
+  "unpkg": "dist/ordify-chat-widget.standalone.js",
+  "jsdelivr": "dist/ordify-chat-widget.standalone.js",
   "peerDependencies": {
     "react": "^18.0.0",
     "react-dom": "^18.0.0"
